--- a/style.css
+++ b/style.css
@@ -1,23 +1,52 @@
+html{
+    width: 100%;
+    height: 100%;
+}
 body{
+    text-align: center;
+    color: #67f9ca78;
     background-size:cover;
     background-image: url("./images/bg.png");
     font-family: Arial, Helvetica, "Nimbus Sans L", sans-serif;
 }
 h1.title{
-    text-align: center;
     font-family: "Courier New", sans-serif;
-    color: #20152145;
-    text-shadow:
-            -0px -0px 0 #3a3a3a,
-            0px -0px 0 #3a3a3a,
-            -1px 1px 0 #EEE,
-            1px 1px 0 #EEE;
+    margin-top: 150px;
     letter-spacing: 10px;
-    margin-top: 100px;
     font-size: 55px;
 }
 img.cat{
     width:50px;
     height:50px;
+}
+img.back{
+    width:50px;
+    height:50px;
+}
+p.intro{
+    margin-bottom: 55px;
+ }
 
+/* unvisited link */
+a:link {
+    color: #54f4ff78;
+    text-decoration: none;
+}
+
+/* visited link */
+a:visited {
+    color: #54f4ff78;
+    text-decoration: none;
+}
+
+/* mouse over link */
+a:hover {
+    color: #67f9ca78;
+    text-decoration: underline;
+}
+
+/* selected link */
+a:active {
+    color: #67f9ca78;
+    text-decoration: underline;
 }
