--- a/style.css
+++ b/style.css
@@ -7,6 +7,8 @@ body{
     color: #67f9ca78;
     background-size:cover;
     background-image: url("./images/bg.png");
+    background-repeat: no-repeat;
+    background-attachment: fixed;
     font-family: Arial, Helvetica, "Nimbus Sans L", sans-serif;
 }
 h1.title{
@@ -49,4 +51,10 @@ a:hover {
 a:active {
     color: #67f9ca78;
     text-decoration: underline;
+}
+
+@media screen and  (max-width: 820px){
+    body {
+        margin-top: 260px;
+    }
 }
